static_homepage/homepage-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage-service
spec:
  type: NodePort
  clusterIP: 10.100.100.100
  selector:
    app: web
  ports:
  - name: http
    nodePort: 31000
    port: 80
    targetPort: 80
    protocol: TCP
  - name: https
    nodePort: 32000
    port: 443
    targetPort: 443
    protocol: TCP
