static_homepage/homepage-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - www.dxdata.co.kr
    secretName: tls-secret
  rules:
   - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: homepage-service
            port:
              number: 80
